fixed infinite scrolling background on mobile

--- a/src/pages/about.scss
+++ b/src/pages/about.scss
@@ -23,8 +23,7 @@ html body {
     top: 13%;
     bottom: -10%;
     right: 0;
-    z-index: -4;
-    pointer-events: none;
+    z-index: -1;
   }
 }
 @media only screen and (min-width: 768px) {
