--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -96,38 +96,73 @@ button.navbar-toggler {
   justify-content: center;
 }
 
-.nav-background-image-x {
-  // background: url("../../static/Untitled-1.jpg") repeat-x;
-  // height: 900px;
-  // width: 4320px;
-  // animation: slide 90s linear infinite;
+@media only screen and (max-width: 768px) {
+  .nav-background-image-x {
+    // background: url("../../static/Untitled-1.jpg") repeat-x;
+    // height: 900px;
+    // width: 4320px;
+    // animation: slide 90s linear infinite;
 
-  object-fit: cover;
-  min-width: 100%;
-  min-height: 100%;
-  height: 110%;
-  position: fixed;
-  bottom: -10%;
-  right: 0;
-  z-index: -4;
+    object-fit: cover;
+    min-width: 100%;
+    min-height: 100%;
+    height: 110%;
+    position: fixed;
+    bottom: -10%;
+    right: 0;
+    z-index: -4;
+  }
+
+  .background-image-x {
+    background: url("../../static/Untitled-1.jpg") repeat-x;
+    height: 100%;
+    width: 600%;
+    animation: slide 120s linear infinite;
+
+    // object-fit: cover;
+    // min-width: 100%;
+    // min-height: 100%;
+    // height: 110%;
+    // position: fixed;
+    // bottom: -10%;
+    // right: 0;
+    z-index: -3;
+  }
 }
 
-.background-image-x {
-  background: url("../../static/Untitled-1.jpg") repeat-x;
-  height: 900px;
-  width: 4320px;
-  animation: slide 90s linear infinite;
+@media only screen and (min-width: 768px) {
+  .nav-background-image-x {
+    // background: url("../../static/Untitled-1.jpg") repeat-x;
+    // height: 900px;
+    // width: 4320px;
+    // animation: slide 90s linear infinite;
 
-  // object-fit: cover;
-  // min-width: 100%;
-  // min-height: 100%;
-  // height: 110%;
-  // position: fixed;
-  // bottom: -10%;
-  // right: 0;
-  z-index: -3;
+    object-fit: cover;
+    min-width: 100%;
+    min-height: 100%;
+    height: 110%;
+    position: fixed;
+    bottom: -10%;
+    right: 0;
+    z-index: -4;
+  }
+
+  .background-image-x {
+    background: url("../../static/Untitled-1.jpg") repeat-x;
+    height: 900px;
+    width: 4320px;
+    animation: slide 90s linear infinite;
+
+    // object-fit: cover;
+    // min-width: 100%;
+    // min-height: 100%;
+    // height: 110%;
+    // position: fixed;
+    // bottom: -10%;
+    // right: 0;
+    z-index: -3;
+  }
 }
-//
 @keyframes slide{
   0%{
     transform: translate3d(0, 0, 0);
@@ -145,15 +180,15 @@ button.navbar-toggler {
 @media only screen and (max-width: 768px) {
 
   .background-image {
-    min-width: 100%;
-    min-height: 100%;
+    background: url("../../static/Untitled-2.jpg") repeat-x;
     height: 100%;
+    width: 600%;
+    animation: slide 120s linear infinite;
     position: fixed;
     top: 13%;
     bottom: -10%;
     right: 0;
-    z-index: -4;
-    pointer-events: none;
+    z-index: -2;
   }
 }
 @media only screen and (min-width: 768px) {
